Adjust channel percent sessions layout to prevent overlap with channel name

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -125,7 +125,7 @@ textarea {
 }
 .channel_sessions_percent_0 {
 	position: absolute;
-	left: 290px;
+	left: 302px;
 	top: 210px;
 	font-size: 14px;
 }
@@ -142,7 +142,7 @@ textarea {
 }
 .channel_change_0 {
 	position: absolute;
-	left: 290px;
+	left: 302px;
 	top: 230px;
 	font-size: 14px;
 }
@@ -154,7 +154,7 @@ textarea {
 }
 .channel_sessions_percent_1 {
 	position: absolute;
-	left: 292px;
+	left: 302px;
 	top: 300px;
 	font-size: 14px;
 }
@@ -183,7 +183,7 @@ textarea {
 }
 .channel_sessions_percent_2 {
 	position: absolute;
-	left: 292px;
+	left: 302px;
 	top: 374px;
 	font-size: 14px;
 }
@@ -212,7 +212,7 @@ textarea {
 }
 .channel_sessions_percent_3 {
 	position: absolute;
-	left: 292px;
+	left: 302px;
 	top: 417px;
 	font-size: 14px;
 }
@@ -241,7 +241,7 @@ textarea {
 }
 .channel_sessions_percent_4 {
 	position: absolute;
-	left: 292px;
+	left: 302px;
 	top: 461px;
 	font-size: 14px;
 }
@@ -270,7 +270,7 @@ textarea {
 }
 .channel_sessions_percent_5 {
 	position: absolute;
-	left: 292px;
+	left: 302px;
 	top: 512px;
 	font-size: 14px;
 }
@@ -299,7 +299,7 @@ textarea {
 }
 .channel_sessions_percent_6 {
 	position: absolute;
-	left: 292px;
+	left: 302px;
 	top: 560px;
 	font-size: 14px;
 }
